--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -270,7 +270,7 @@
 
 .check-tickets-details, .book-tickets-details {
     font-family: boogaloo, cursive;
-    text-align: center;
+    text-align: left;
 }
 
 .booking-writeup {
